--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "moment": "^2.24.0",
     "pg": "^7.12.1",
     "readline": "^1.3.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "why-is-node-running": "^2.1.0"
   },
   "devDependencies": {},
   "scripts": {
