--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "archiver": "^3.1.1",
     "moment": "^2.24.0",
-    "pg": "^7.12.1",
+    "pg": "^8.5.1",
+    "pg-promise": "^10.10.1",
     "readline": "^1.3.0",
     "request": "^2.88.0",
     "why-is-node-running": "^2.1.0"
